--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <div class="container-fluid intro">
         <div class="row index">
             <div class="col-3 logo">Projects</div>
-            <div class="col nav"></div>
+            <div class="col-6 nav">
+                <a href="Home">Home</a>
+                <a href="Home">Home</a>
+                <a href="Home">Home</a>
+                <a href="Home">Home</a>
+                <a href="Home">Home</a>
+                <a href="Home">Home</a>
+            </div>
+        </div>
+        <div class="container-fluid cont">
+            <p>"Life is about learning; when you stop learning, you stop growing."</p>
         </div>
     </div>
     
