--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="container-fluid intro">
         <div class="row index">
             <div class="col-3 logo">Projects</div>
+            <div class="col-3 logo"></div>
             <div class="col-6 nav">
                 <a href="Home">Home</a>
-                <a href="Home">Home</a>
-                <a href="Home">Home</a>
-                <a href="Home">Home</a>
-                <a href="Home">Home</a>
-                <a href="Home">Home</a>
+                <a href="Home">About</a>
+                <a href="Home">Projects</a>
+                <a href="Home">My Portfolio</a>
+                <a href="Home">Contact</a>
             </div>
         </div>
         <div class="container-fluid cont">
